syntax = "proto2";

option cc_enable_arenas = true;

package c2019.winch;

enum ClimbType { // Combination of goal and state
  NONE = 0;
  SOLO = 1;
  BUDDY = 2;
}

message WinchInput {
  required uint64 timestamp = 1;
  required double winch_current = 2;
}

message WinchOutput {
  required uint64 timestamp = 1;
  required double right_winch_voltage = 2;
  required double left_winch_voltage = 3;
  required bool drop_forks = 4; // For the buddy climb
}

message WinchGoal {
  required uint64 timestamp = 1;
  required ClimbType climb_goal = 2;
  required bool winch_right = 3;
  required bool winch_left = 4;
}

message WinchStatus {
  required uint64 timestamp = 1;
  required ClimbType climb_type = 2;
  required bool climb = 3; // False is IDLE, true is climbing
  required double winch_current = 4;
}
